<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_nav_mapa"
            android:title="@string/mapa" />

        <item
            android:id="@+id/nav_lugares_turisticos"
            android:icon="@drawable/ic_nav_lugares"
            android:title="@string/lugaresTuristicos" />

        <item
            android:id="@+id/nav_lugares_visitados"
            android:icon="@drawable/ic_nav_visitados"
            android:title="@string/lugaresVisitados" />

        <item
            android:id="@+id/nav_lugares_favoritos"
            android:icon="@drawable/ic_nav_favoritos"
            android:title="@string/lugaresFavoritos" />

        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_nav_config"
            android:title="@string/configuracion" />
    </group>

</menu>
